// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification portal should render notifications given as direct props 1`] = `
<body>
  <div
    class="notifications-portal"
  >
    <div
      class="pf-v5-c-alert pf-m-success notification-item"
      data-ouia-component-id="OUIA-Generated-Alert-success-2"
      data-ouia-component-type="PF5/Alert"
      data-ouia-safe="true"
      id="0"
    >
      <div
        class="pf-v5-c-alert__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          />
        </svg>
      </div>
      <h4
        class="pf-v5-c-alert__title"
      >
        <span
          class="pf-v5-screen-reader"
        >
          Success alert:
        </span>
        Notification title
      </h4>
      <div
        class="pf-v5-c-alert__action"
      >
        <button
          aria-disabled="false"
          aria-label="close-notification"
          class="pf-v5-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-2"
          data-ouia-component-type="PF5/Button"
          data-ouia-safe="true"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="pf-v5-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-v5-c-alert__description"
      >
        <div
          class="pf-v5-c-content"
        >
          <small
            class="sentry-mask data-hj-suppress"
            data-ouia-component-id="OUIA-Generated-Text-2"
            data-ouia-component-type="PF5/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Some meaningfull description
          </small>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Notification portal should render notifications given as direct props over store notifications 1`] = `
<body>
  <div
    class="notifications-portal"
  >
    <div
      class="pf-v5-c-alert pf-m-success notification-item"
      data-ouia-component-id="OUIA-Generated-Alert-success-3"
      data-ouia-component-type="PF5/Alert"
      data-ouia-safe="true"
      id="Direct notification"
    >
      <div
        class="pf-v5-c-alert__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          />
        </svg>
      </div>
      <h4
        class="pf-v5-c-alert__title"
      >
        <span
          class="pf-v5-screen-reader"
        >
          Success alert:
        </span>
        Notification title
      </h4>
      <div
        class="pf-v5-c-alert__action"
      >
        <button
          aria-disabled="false"
          aria-label="close-notification"
          class="pf-v5-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-3"
          data-ouia-component-type="PF5/Button"
          data-ouia-safe="true"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="pf-v5-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-v5-c-alert__description"
      >
        <div
          class="pf-v5-c-content"
        >
          <small
            class="sentry-mask data-hj-suppress"
            data-ouia-component-id="OUIA-Generated-Text-3"
            data-ouia-component-type="PF5/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Some meaningfull description
          </small>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Notification portal should render notifications given from store 1`] = `
<body>
  <div
    class="notifications-portal"
  >
    <div
      class="pf-v5-c-alert pf-m-success notification-item"
      data-ouia-component-id="OUIA-Generated-Alert-success-1"
      data-ouia-component-type="PF5/Alert"
      data-ouia-safe="true"
      id="0"
    >
      <div
        class="pf-v5-c-alert__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          />
        </svg>
      </div>
      <h4
        class="pf-v5-c-alert__title"
      >
        <span
          class="pf-v5-screen-reader"
        >
          Success alert:
        </span>
        Notification title
      </h4>
      <div
        class="pf-v5-c-alert__action"
      >
        <button
          aria-disabled="false"
          aria-label="close-notification"
          class="pf-v5-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-1"
          data-ouia-component-type="PF5/Button"
          data-ouia-safe="true"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="pf-v5-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </button>
      </div>
      <div
        class="pf-v5-c-alert__description"
      >
        <div
          class="pf-v5-c-content"
        >
          <small
            class="sentry-mask data-hj-suppress"
            data-ouia-component-id="OUIA-Generated-Text-1"
            data-ouia-component-type="PF5/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Some meaningfull description
          </small>
        </div>
      </div>
    </div>
  </div>
</body>
`;
